--- a/HelloCompat/app/src/main/res/values/strings.xml
+++ b/HelloCompat/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HelloCompat</string>
+    <string name="color_button_text">Change Color</string>
 </resources>
